# selvage

./: .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  DCO  LICENSE  MANIFEST.in  NOTICE  README.md  README_EN.md  pyproject.toml  test_json_parsing_refactor.py  test_retry_fix.py
assets/: demo.cast
docs/: CR-17-context-limit-over-handling-specification.md  CR-17-token-validation-improvement.md  CR-18-multiturn-review-implementation-specification.md  CR-19-review-synthesizer-implementation-specification.md  Selvage diff-only 모드 개선 요구사항 분석 보고서.md  TESTING.md  context-optimization-analysis.md  deep_research_request_context_level_optimization.md  e2e_testing_guide.md  enhanced_context_extractor_implementation.md  optimized_tree_sitter_context_extractor.md  optimized_tree_sitter_context_extractor_test.md  retry-logic-implementation-spec.md  tree-sitter 활용 케이스.md  tree-sitter-기반-컨텍스트-추출-전략.md  tree_sitter_context_extraction_report.md  tree_sitter_context_extraction_report_new.md  uv_배포_가이드.md  패키지_배포_가이드.md  프로젝트_설명.md
e2e/: README.md  conftest.py  e2e_api_key_scenarios.py  e2e_cli_basic.py  e2e_container_full.py  e2e_error_scenarios.py  e2e_local_build.py  e2e_python_version_compatibility.py  e2e_realistic_workflows.py  helpers.py  pytest.ini
llm_eval/: README_DEEPEVAL.md  conftest.py  pytest.ini  test_deepeval_advanced.py  test_deepeval_hello_world.py  test_reviewer_eval.py
scripts/: build_testpypi_image.sh  create_demo.sh  prepare_integration_test_data.py
selvage/: __main__.py  __version__.py  cli.py
tests/: README_TEST_EXECUTION.md  conftest.py  pytest.ini  test_base_gateway_retry.py  test_claude_provider.py  test_cli_claude_provider.py  test_cli_error_handling.py  test_cli_flags.py  test_cli_version.py  test_config_claude_provider.py  test_config_env_vars.py  test_config_language.py  test_config_review_log_dir.py  test_console_debug_mode.py  test_context_limit_error_analysis.py  test_context_limit_handling_mock.py  test_context_limit_workflow_integration.py  test_cost_estimator.py  test_diff_parser.py  test_error_pattern_parser.py  test_formatted_hunk.py  test_hunk_line_calculator.py  test_json_extractor.py  test_json_parsing_error.py  test_llm_gateway.py  test_llm_gateway_request.py  test_llm_gateway_review_code.py  test_new_error_handling.py  test_openrouter_api_error.py  test_openrouter_first.py  test_openrouter_gateway_retry.py  test_prompt_generator.py  test_review_display.py  test_review_formatter.py  test_sample_class.py  test_tree_sitter_parsing.py  (+1 more)
(+212 files in other folders)
